# Placebo

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  IDEAS.md  PLACEBO_CLAUDE_CODE_CONTEXT.md  README.en.md  README.md  RUNBOOK.md  docker-compose.dev.yml  index.html  package-lock.json  package.json  vite.config.ts
crates/placebo-api/: .env.example  Cargo.toml
crates/placebo-api/docker/: Dockerfile  docker-compose.yml  init-db.sql
crates/placebo-api/migrations/: 001_cameras.sql  002_users_auth.sql  003_rooms.sql  004_recordings_clips_ratings.sql  005_seed_cameras.sql  006_seed_users.sql  007_auth_password.sql  008_users_username_dob.sql  009_camera_stream_sources.sql  010_seed_alpha_cameras.sql
crates/placebo-api/src/: app_state.rs  config.rs  error.rs  lib.rs  main.rs
crates/placebo-api/src/extractors/: auth.rs  geo.rs  mod.rs  pagination.rs
crates/placebo-api/src/handlers/: auth.rs  boosts.rs  cameras.rs  clips.rs  health.rs  hls_proxy.rs  me.rs  mod.rs  ratings.rs  rooms.rs  users.rs  world.rs
crates/placebo-api/src/middleware/: mod.rs
crates/placebo-api/src/redis/: mod.rs  rate_limit.rs  session.rs  viewer_count.rs
crates/placebo-api/src/repositories/: boost_repo.rs  camera_repo.rs  clip_repo.rs  mod.rs  rating_repo.rs  room_repo.rs  user_repo.rs  world_repo.rs
crates/placebo-api/src/services/: auth_service.rs  boost_service.rs  camera_service.rs  clip_service.rs  hls_source.rs  mod.rs  rating_service.rs  room_service.rs  user_service.rs  world_service.rs
crates/placebo-api/src/websocket/: mod.rs
crates/placebo-api/static/demo/: README.md
crates/placebo-shared/: Cargo.toml
crates/placebo-shared/src/: auth.rs  camera.rs  codegen.rs  error.rs  lib.rs  pagination.rs  recording.rs  room.rs  user.rs
data/: cameras-seed.json
docs/: ARCHITECTURE_3D.md  ARCHITECTURE_FROM_OPUS.md
docs/superpowers/plans/: 2026-03-16-3d-world-visual-polish.md  2026-03-16-osm-tile-pipeline.md  2026-03-18-auth-system.md  2026-05-14-milestone-0-foundation.md  2026-05-14-milestone-1-shell.md  2026-05-14-milestone-2-auth.md  2026-05-14-milestone-3-cameras-hls.md  2026-05-14-milestone-4-home-categories-world.md  2026-05-14-milestone-5-rooms-websocket.md  2026-05-14-milestone-6-profile-friends-create.md  2026-05-14-milestone-7-polish-distribution.md
docs/superpowers/specs/: 2026-03-16-3d-world-visual-polish-design.md  2026-03-16-osm-tile-pipeline-design.md  (+1 more)
pipeline/: Dockerfile.go2rtc  docker-compose.yml  go2rtc.yaml  nginx.conf  stream-proxy.mjs
pipeline/scripts/: generate-tiles.sh  youtube-stream.sh
pipeline/sql/: 01_init.sql  02_buildings_view.sql  03_roads_view.sql  04_water_view.sql  05_parks_view.sql  06_buildings_tile_view.sql  07_indexes.sql
pipeline/styles/: default.style  full.style
scripts/: gen-types.mjs  gen-types.ps1  gen-types.sh  verify-youtube-seed.sh
src/: App.css  App.tsx  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_cameras.sql  002_full_schema.sql  003_user_preferences.sql
src-tauri/src/: lib.rs  main.rs  webrtc.rs
src-tauri/src/commands/: camera.rs  mod.rs  preferences.rs  secure.rs
src-tauri/src/db/: camera.rs  mod.rs  preferences.rs  recording.rs  seed.rs
src/api/: auth.ts  camera3d.ts  cameras.ts  client.ts  errors.ts
src/auth/: AuthGuard.tsx  AuthProvider.tsx  tokenStorage.ts  useAuth.ts
src/components/: BottomNav.tsx  Icons.tsx
src/hooks/: useCamerasFromApi.ts  useCityTiles.ts  useNearbyCameras.ts  useQuality.ts  useRoadNetwork.ts  useTauriCommand.ts  useTimeOfDay.ts
src/i18n/: index.ts
src/screens/: CreateScreen.tsx  ExploreScreen.tsx  FriendsScreen.tsx  HomeScreen.tsx  ProfileScreen.tsx  WatchRoomScreen.tsx  World3DScreen.tsx
src/services/: cameras.ts  preferences.ts
src/shell/: Breadcrumbs.tsx  Logo.tsx  NavButtons.tsx  ShellLayout.tsx  ShellRoot.tsx  Sidebar.test.tsx  Sidebar.tsx  SidebarItem.tsx  Tab.tsx  TabBar.tsx  TabContent.tsx  ThemeToggle.tsx  TopBar.tsx  routes.tsx
src/theme/: ThemeProvider.tsx  index.ts  variables.css
src/types/: camera.ts  world3d.ts
(+66 files in other folders)
