[package]
name = "placebo"
version = "0.1.0"
description = "Placebo — co-watching app"
authors = []
edition = "2021"

[lib]
name = "placebo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "placebo"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-opener = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
