[package]
name = "placebo"
version = "0.1.0"
description = "Placebo — co-watching app"
authors = []
edition = "2021"

[lib]
name = "placebo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "placebo"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-opener = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "chrono", "uuid"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
# OS keychain for storing the auth token (Windows Credential Manager / macOS Keychain / Secret Service).
# Default features enable the platform-native backend on every supported OS.
keyring = "3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
