[package]
name = "placebo-api"
version = "0.1.0"
edition = "2021"
description = "Placebo API server – axum + PostgreSQL + Redis"

[lib]
name = "placebo_api"
path = "src/lib.rs"

[[bin]]
name = "placebo-api"
path = "src/main.rs"

[dependencies]
placebo-shared = { path = "../placebo-shared" }

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "compression-gzip"] }
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "postgres", "macros", "migrate", "chrono", "uuid", "json"] }

# Redis
deadpool-redis = "0.18"
redis = { version = "0.27", features = ["tokio-comp"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "2"

# R2/S3 (for later, but include now for foundation)
aws-sdk-s3 = "1"
aws-config = "1"

# Auth
argon2 = "0.5"
rand = "0.8"
hex = "0.4"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "cookies"] }
tokio = { version = "1", features = ["test-util"] }
