[package]
name = "placebo-shared"
version = "0.1.0"
edition = "2021"
description = "Shared types and enums for Placebo"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
